<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:text="@string/sign_up"
        android:textColor="@color/colorMain"
        android:textSize="34sp"
        android:layout_marginTop="80dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/for_your_account"
        android:textColor="@color/colorMain"
        android:textSize="16sp"
        android:letterSpacing="0.3"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="40dp"
        android:paddingStart="40dp"
        android:layout_gravity="center|center_vertical">

        <EditText
            android:id="@+id/edtNameSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorMain"
            android:hint="@string/name"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/colorMain"
            android:textColorHint="@color/colorMain"
            android:autofillHints="" />

        <EditText
            android:id="@+id/edtEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorMain"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/colorMain"
            android:textColorHint="@color/colorMain"
            android:autofillHints="" />

        <EditText
            android:id="@+id/edtPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorMain"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorMain"
            android:textColorHint="@color/colorMain"
            android:autofillHints="" />

        <CheckBox
            android:id="@+id/checkAgreePrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/privacy_policy"
            android:backgroundTint="@color/colorMain"
            android:textColor="@color/colorMain"
            android:textColorHint="@color/colorMain" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@color/colorMain"
            android:enabled="false"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnNavigateToLoginScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@color/colorMain"
            android:text="@string/log_in"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>
    </LinearLayout>


</LinearLayout>